ldap_explanations/iptables_ldap
# Generated by iptables-save v1.3.5 on Mon Nov  7 10:09:50 2011
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:local-in - [0:0]
:local-out - [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT -i eth0 -j local-in 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -o eth0 -j local-out 
-A local-in -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A local-in -s 192.168.16.11 -p tcp -m tcp --dport 22 -j ACCEPT 
-A local-in -s 192.168.16.17 -p tcp -m tcp --dport 22 -j ACCEPT
-A local-in -s 192.168.16.15 -p tcp -m tcp --dport 22 -j ACCEPT 
-A local-in -s 192.168.16.11 -p tcp -m tcp --dport 9090 -j ACCEPT
-A local-in -s 192.168.16.17 -p tcp -m tcp --dport 9090 -j ACCEPT
-A local-in -s 192.168.16.14 -p tcp -m tcp --dport 22 -j ACCEPT 
-A local-in -s 192.168.16.8 -p tcp -m tcp --dport 22 -j ACCEPT 
#-A local-in -s 192.168.18.0/255.255.255.240 -p tcp -m tcp --dport 22 -j ACCEPT 
-A local-in -s 10.254.252.0/22 -p tcp -m tcp --dport 22 -j ACCEPT
-A local-in -s 10.110.120.0/22 -p tcp -m tcp -m multiport --dports 22,53,80,443,8080,5222,631,7443 -j ACCEPT
-A local-in -s 10.254.252.0/22 -p tcp -m tcp -m multiport --dports 631,5222,5223,7070,7443 -j ACCEPT
#-A local-in -s 192.168.16.0/255.255.254.0 -p tcp -m tcp --dport 389 -j ACCEPT 
#-A local-in -s 192.168.16.0/255.255.254.0 -p udp -m udp --dport 389 -j ACCEPT 
#-A local-in -s 192.168.16.0/255.255.254.0 -p tcp -m tcp --dport 636 -j ACCEPT 
#-A local-in -s 192.168.16.0/255.255.254.0 -p udp -m udp --dport 636 -j ACCEPT 
-A local-in -p tcp -m tcp --dport 389 -j ACCEPT 
-A local-in -p udp -m udp --dport 389 -j ACCEPT 
-A local-in -p tcp -m tcp --dport 636 -j ACCEPT 
-A local-in -p udp -m udp --dport 636 -j ACCEPT 
-A local-in -p tcp -m tcp --dport 53 -j ACCEPT 
-A local-in -p udp -m udp --dport 53 -j ACCEPT 
-A local-in -s 192.168.16.0/255.255.252.0 -p udp -m udp --dport 123 -j ACCEPT 
-A local-in -s 192.168.16.0/255.255.252.0 -p udp -m udp --dport 137 -j ACCEPT 
-A local-in -s 192.168.16.0/255.255.252.0 -p udp -m udp --dport 138 -j ACCEPT 
-A local-in -s 192.168.16.0/255.255.252.0 -p tcp -m tcp --dport 139 -j ACCEPT 
-A local-in -s 192.168.16.0/255.255.252.0 -p tcp -m tcp --dport 445 -j ACCEPT 
-A local-in -s 192.168.16.0/255.255.252.0 -p udp -m udp --dport 445 -j ACCEPT 
-A local-in -s 192.168.16.0/255.255.252.0 -p tcp -m tcp --dport 7741 -j ACCEPT 
-A local-in -s 192.168.16.0/255.255.252.0 -p udp -m udp --dport 7741 -j ACCEPT 
-A local-in -s 192.168.16.0/255.255.252.0 -p tcp -m tcp --dport 631 -j ACCEPT 
-A local-in -s 192.168.16.0/255.255.252.0 -p tcp -m tcp --dport 21 -j ACCEPT 
-A local-in -s 192.168.16.0/255.255.252.0 -p tcp -m tcp --dport 80 -j ACCEPT
-A local-in -s 10.254.252.0/255.255.252.0 -p tcp -m tcp -m multiport --dports 80,443 -j ACCEPT 
-A local-in -s 192.168.16.0/255.255.252.0 -p tcp -m tcp --dport 443 -j ACCEPT
-A local-in -s 192.168.16.0/255.255.252.0 -p tcp -m tcp -m multiport --dports 5222,5223,7070,7443 -j ACCEPT
#-A local-in -s 192.168.16.17 -p tcp -m tcp --dport snmp -j ACCEPT 
#-A local-in -s 192.168.16.17 -p udp -m udp --dport snmp -j ACCEPT 
-A local-in -p icmp -j ACCEPT 
-A local-out -j ACCEPT 
COMMIT
# Completed on Mon Nov  7 10:09:50 2011
# Generated by iptables-save v1.3.5 on Mon Nov  7 10:09:50 2011
*nat
:PREROUTING ACCEPT [52:8039]
:POSTROUTING ACCEPT [12:1094]
:OUTPUT ACCEPT [12:1094]
COMMIT
# Completed on Mon Nov  7 10:09:50 2011
# Generated by iptables-save v1.3.5 on Mon Nov  7 10:09:50 2011
*mangle
:PREROUTING ACCEPT [284:31964]
:INPUT ACCEPT [284:31964]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [224:104074]
:POSTROUTING ACCEPT [224:104074]
:local-in - [0:0]
:local-out - [0:0]
-A INPUT -i eth0 -j local-in 
-A OUTPUT -o eth0 -j local-out 
COMMIT
# Completed on Mon Nov  7 10:09:50 2011
