ldap_explanations/iptables_workstation
# Generated by iptables-save v1.4.7 on Tue Aug 28 11:44:38 2018
*nat
:PREROUTING ACCEPT [159:25042]
:POSTROUTING ACCEPT [728:48130]
:OUTPUT ACCEPT [729:48170]
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535 
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535 
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE 
COMMIT
# Completed on Tue Aug 28 11:44:38 2018
# Generated by iptables-save v1.4.7 on Tue Aug 28 11:44:38 2018
*mangle
:PREROUTING ACCEPT [18246:17502381]
:INPUT ACCEPT [18202:17498051]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [14439:2108840]
:POSTROUTING ACCEPT [14448:2112015]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill 
COMMIT
# Completed on Tue Aug 28 11:44:38 2018
# Generated by iptables-save v1.4.7 on Tue Aug 28 11:44:38 2018
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT 
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT 
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT 
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -s 192.168.16.11/32 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 192.168.16.14/32 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 192.168.16.17/32 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -s 192.168.16.11/32 -p tcp -m tcp --dport 5900 -j ACCEPT 
-A INPUT -s 192.168.16.14/32 -p tcp -m tcp --dport 5900 -j ACCEPT 
-A INPUT -s 192.168.16.17/32 -p tcp -m tcp --dport 5900 -j ACCEPT
-A INPUT -s 192.168.16.0/22 -p tcp -m multiport --dports 137,138,139,445,631 -j ACCEPT 
-A INPUT -s 192.168.16.0/22 -p udp -m multiport --dports 137,138,139,445,631 -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A FORWARD -m physdev --physdev-is-bridged -j ACCEPT 
-A FORWARD -d 192.168.122.0/24 -o virbr0 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -s 192.168.122.0/24 -i virbr0 -j ACCEPT 
-A FORWARD -i virbr0 -o virbr0 -j ACCEPT 
-A FORWARD -o virbr0 -j REJECT --reject-with icmp-port-unreachable 
-A FORWARD -i virbr0 -j REJECT --reject-with icmp-port-unreachable 
-A OUTPUT -j ACCEPT 
COMMIT
# Completed on Tue Aug 28 11:44:38 2018
